--- a/asset/css/page/main.css
+++ b/asset/css/page/main.css
@@ -32,13 +32,25 @@ body{
 }
 
 .projeto{
-	height: 400px;
 	background-image: url('../../img/banner_4.jpg');
 }
 
-.projeto, .carousel-img{
+.quemsomos{
+	background-image: url('../../img/banner_2.jpg');
+}
+
+.bg-quemsomos{
+	background-image: url('../../img/banner_1.jpg');
+}
+.quemsomos, .projeto{
+	height: 450px;
+}
+.projeto, .carousel-img, .quemsomos,.bg-quemsomos{
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center  fixed;
 	background-size: cover; 
+}
+.shadow-b{
+	box-shadow: 0px 5px 20px black;
 }
