--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -6,6 +6,7 @@ body{
 	color: #4c4c4c;
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
+	font-weight: 600;
 }
 
 main{
@@ -40,21 +41,28 @@ main{
 }
 
 .projeto{
-	background-image: url('../../img/banner_4.jpg');
+	background-image: url('../img/banner_4.jpg');
 }
 
 .quemsomos{
-	background-image: url('../../img/banner_2.jpg');
+	background-image: url('../img/banner_2.jpg');
 }
 
 .bg-quemsomos{
-	background-image: url('../../img/banner_1.jpg');
+	/*background-image: url('../img/banner_1.jpg');*/
 	text-transform: none;
+	font-weight: 400;
 }
 
 .doacoes{
-	background-image: url('../../img/padrinho.jpg');
+	background-image: url('../img/padrinho.jpg');
 	height: 100%;
+	padding-top: 85%;
+}
+
+.doacoes .position-absolute {
+	position: absolute;
+	right: 0%;
 }
 
 .quemsomos, .projeto{
@@ -73,4 +81,11 @@ main{
 
 .shadow-b:hover{
 	background-color: #e6ffe6;
+}
+
+.inverse-shadow{
+	background: linear-gradient(260deg, rgba(204, 204, 0,0.8), rgba(204, 204, 0,0.0));
+}
+.text-shadow{
+	text-shadow: 1px 1px 1px black;
 }
