--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -7,6 +7,28 @@ body{
 	text-transform: uppercase;
 	font-weight: 600;
 }
+.navbar-brand{
+	width: 100px;
+}
+
+.bg-transparent-dark{
+	background-color: rgba(0, 0, 0, 0.2) !important;
+}
+.navbar-dark .navbar-nav .nav-link{
+	transition: all 0.5s;
+	font-weight: 700;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover{
+	color: #000066 !important
+}
+.dropdown, .dropdown-menu{
+
+}
+
+.dropdown, .dropdown-menu:hover{
+	display: block !important;
+}
 
 .bg-t-black{
 	background-color: rgb(0, 0, 0);
