--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4046,9 +4046,9 @@ tbody.collapse.in {
   list-style: none;
   font-size: 14px;
   text-align: left;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.15);
+  /*background-color: transparent;*/
+  /*border: 1px solid #ccc;*/
+  /*border: 1px solid rgba(0, 0, 0, 0.15);*/
   border-radius: 4px;
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
