--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4041,7 +4041,7 @@ tbody.collapse.in {
   display: none;
   float: left;
   min-width: 160px;
-  padding: 5px 0;
+  padding: 20px 10px;
   margin: 2px 0 0;
   list-style: none;
   font-size: 14px;
