--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4046,7 +4046,7 @@ tbody.collapse.in {
   list-style: none;
   font-size: 14px;
   text-align: left;
-  /*background-color: transparent;*/
+  background-color: #8dc63f;
   /*border: 1px solid #ccc;*/
   /*border: 1px solid rgba(0, 0, 0, 0.15);*/
   border-radius: 4px;
