--- a/public/landing/css/page/icomoon.css
+++ b/public/landing/css/page/icomoon.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
 	font-family: 'icomoon';
 	src:url('../fonts/icomoon/icomoon.eot?qtatmt');
 	src:url('../fonts/icomoon/icomoon.eot?qtatmt#iefix') format('embedded-opentype'),
@@ -7,7 +7,7 @@
 		url('../fonts/icomoon/icomoon.svg?qtatmt#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
-}
+}*/
 
 [class^="icon-"], [class*=" icon-"] {
 	font-family: 'icomoon';
