--- a/public/landing/css/page/simple-line-icons.css
+++ b/public/landing/css/page/simple-line-icons.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
   font-family: 'simple-line-icons';
   src:  url('../fonts/simple-line-icons/Simple-Line-Icons.eot?v=2.2.2');
   src:  url('../fonts/simple-line-icons/Simple-Line-Icons.eot?#iefix&v=2.2.2') format('embedded-opentype'),
@@ -8,7 +8,7 @@
         url('../fonts/simple-line-icons/Simple-Line-Icons.svg?v=2.2.2#simple-line-icons') format('svg');
   font-weight: normal;
   font-style: normal;
-}
+}*/
 /*
  Use the following CSS code if you want to have a class per icon.
  Instead of a list of all class selectors, you can use the generic [class*="icon-"] selector, but it's slower:
